--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,129 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.nav {
+  display: flex;
+  background: orange;
+  padding: 10px 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav .ecommerce-logo {
+  width: 100px;
+  height: 100px;
+}
+.nav .ecommerce-logo a img {
+  height: 50px;
+  width: 50px;
+}
+
+.nav .ecommerce-logo a p {
+  font-size: large;
+  text-decoration: none;
+}
+
+.nav .add-product a {
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: medium;
+}
+
+.nav .add-product a img {
+  height: 20px;
+  width: 20px;
+}
+
+.nav .left-div img {
+  height: 100px;
+  width: 100px;
+}
+
+.nav .left-div .plus-image {
+  height: 20px;
+  width: 20px;
+}
+
+.nav .right-div a {
+  text-decoration: none;
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.product-carditem {
+  display: flex;
+  background-color: white;
+  padding: 2px 5px;
+  margin: 10px;
+  justify-content: space-between;
+}
+
+.addProduct-form {
+  background-color: #fff;
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  margin: 50px auto;
+  border-radius: 6px;
+}
+
+.field {
+  width: 100%;
+}
+
+.new-product-form {
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+}
+.new-product-form div input {
+  display: block;
+  border: 1px solid black;
+  margin: auto;
+  margin-top: 10px;
+  height: 30px;
+  width: 400px;
+  padding: 10px;
+}
+
+.new-product-form div button {
+  display: block;
+  border: 1px solid black;
+  margin: auto;
+  margin-top: 10px;
+  height: 30px;
+  width: 200px;
+}
+
+remove-button {
+  background-color: red;
+}
+
+card-title {
+  height: 120px;
+  width: 120px;
+  border: 1px solid black;
+}
+
+.success-message {
+  float: right;
+  width: 20%;
+  border: 1px solid black;
+  text-align: center;
+  background-color: cyan;
 }
