--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,10 @@ card-title {
   text-align: center;
   background-color: cyan;
 }
+
+.product-description {
+  border: 2px solid black;
+  margin: 10px;
+  padding: 5px;
+  box-shadow: 1px 2px black;
+}
